location and rotation with align to 3d cursor #69576

Closed
opened 2019-09-06 08:42:03 +02:00 by garry giomarelli · 13 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 22:13, hash: 4c4a8bf588
Worked: (optional)

Short description of error

when adding a new object to a 3d cursor that had been aligned to geometry of another object, the option to "align"object with "3d cursor" changes to "world" when "rotation" or "location" are altered.

Exact steps for others to reproduce the error

when adding a new object to a 3d cursor that had been aligned to geometry of another object, the option to "align"object with "3d cursor" changes to "world" when "rotation" or "location" are altered.

reproduce with these steps**
rotate cube 45d on X axis
select cursor tool, open tool options pressing "n"
select tool tab, change "orientation" from "view" to "geometry"
click face of cube to move cursor to geometry face orientation.
"shift + A" add mesh cylinder
open initial object properties options from bottom left hand side of view port.
change "align" "world" to "align" 3d cursor"
in same new object properties tab now try to alter "rotation" or "location" coordinates

"align" changes back to "world" disabling the ability to alter objects location or rotation in the initial object properties.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15 **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 22:13, hash: `4c4a8bf588` Worked: (optional) **Short description of error** when adding a new object to a 3d cursor that had been aligned to geometry of another object, the option to "align"object with "3d cursor" changes to "world" when "rotation" or "location" are altered. **Exact steps for others to reproduce the error** when adding a new object to a 3d cursor that had been aligned to geometry of another object, the option to "align"object with "3d cursor" changes to "world" when "rotation" or "location" are altered. reproduce with these steps** rotate cube 45d on X axis select cursor tool, open tool options pressing "n" select tool tab, change "orientation" from "view" to "geometry" click face of cube to move cursor to geometry face orientation. "shift + A" add mesh cylinder open initial object properties options from bottom left hand side of view port. change "align" "world" to "align" 3d cursor" in same new object properties tab now try to alter "rotation" or "location" coordinates "align" changes back to "world" disabling the ability to alter objects location or rotation in the initial object properties.

Added subscriber: @irragg

Added subscriber: @irragg

#69575 was marked as duplicate of this issue

#69575 was marked as duplicate of this issue

#69574 was marked as duplicate of this issue

#69574 was marked as duplicate of this issue

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Duplicate of #69574 and #69575 . Also please remove those brackets, e.g. [Please fill out a short description of the error here]. They make the report harder to read.

Duplicate of #69574 and #69575 . Also please remove those brackets, e.g. [Please fill out a short description of the error here]. They make the report harder to read.
Germano Cavalcante self-assigned this 2019-09-20 20:01:59 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Hm, this is probably caused by 3b8a14a3c0, @mano-wii feel free to throw back at me
(iirc rotation was only correctly working if this was set to WORLD -- but it could be made working "on top"?)

Hm, this is probably caused by 3b8a14a3c0, @mano-wii feel free to throw back at me (iirc rotation was only correctly working if this was set to WORLD -- but it could be made working "on top"?)
Germano Cavalcante removed their assignment 2019-09-23 14:56:15 +02:00
Philipp Oeser was assigned by Germano Cavalcante 2019-09-23 14:56:15 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Added subscriber: @DanielPaul

Added subscriber: @DanielPaul
Philipp Oeser removed their assignment 2019-11-06 12:18:53 +01:00

Campbell is working on a Add Object Tool (D6678)
This problem can be addressed there.

Campbell is working on a `Add Object Tool` ([D6678](https://archive.blender.org/developer/D6678)) This problem can be addressed there.

This issue was referenced by d5bcc375ba

This issue was referenced by d5bcc375ba4b7ed6446212c355a26de09d91c36c
Member

Prior to 3b8a14a3c0 it was not possible to change the rotation in the Adjust Last Operation HUD at all.
Now if you touch the rotation, it changes back to WORLD, because this rotation happens in world space anyways.

But agree this feels a little clunky (and in fact we dont really have to set it to WORLD in the UI).
Will post a patch which also addresses #74059 (align new object to world doesn't work, it always aligns to 3d cursor) in a bit...

Prior to 3b8a14a3c0 it was not possible to change the rotation in the `Adjust Last Operation` HUD at all. Now if you touch the rotation, it changes back to WORLD, because this rotation happens in world space anyways. But agree this feels a little clunky (and in fact we dont really have to set it to WORLD in the UI). Will post a patch which also addresses #74059 (align new object to world doesn't work, it always aligns to 3d cursor) in a bit...
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2020-02-27 11:51:44 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69576
No description provided.